--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple website</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <header>
-
+         <nav>
+            <h2 class="logo">ToNu</h2>
+            <button class="btn-primary">Download Resume</button>
+         </nav>
     </header>
     <main>
 
