--- a/index.html
+++ b/index.html
@@ -12,9 +12,50 @@
             <h2 class="logo">ToNu</h2>
             <button class="btn-primary">Download Resume</button>
          </nav>
+         <div class="main-header">
+            <div class="header-content">
+                <img class="header-img" src="assets/Group.png" alt="_blank">
+                <h1 class="header-title">"In the near future, I hope to become a Developer."</h1>
+                <p class="header-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+                <button class="btn-primary header-btn"><a href="#footer" class="header-link every-link">Contact with me</a></button>
+            </div>
+         </div>
     </header>
     <main>
-
+         <section class="main-section">
+            <h1 class="sectional-header">Why Web Development?</h1>
+            <p class="sectional-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <div class="left-items">
+                <div class="left-contents">
+                    <h2 class="section-title">I will Do Coding and Change The World</h2>
+                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="img">
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </div>
+            <div class="left-items">
+                <div class="left-contents">
+                    <h2 class="section-title">I will Do Coding and Change The World</h2>
+                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="img">
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </div>
+            <div class="left-items">
+                <div class="left-contents">
+                    <h2 class="section-title">I will Do Coding and Change The World</h2>
+                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="btn-primary">Learn More</button>
+                </div>
+                <div class="img">
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+            </div>
+         </section>
     </main>
     <footer>
         
