added more section to html file

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
          <nav>
             <h2 class="logo">ToNu</h2>
-            <button class="btn-primary">Download Resume</button>
+            <a class="common-link" href="#"><button class="btn-primary">Download Resume</a></button>
          </nav>
          <div class="main-header">
             <div class="header-content">
@@ -29,32 +29,36 @@
                 <div class="left-contents">
                     <h2 class="section-title">I will Do Coding and Change The World</h2>
                 <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary">Learn More</button>
+                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
                     <img src="assets/Layer_1.png" alt="">
                 </div>
+            </div>
+            <div class="left-items right-items">
+                <div class="img">
+                    <img src="assets/Layer_1.png" alt="">
+                </div>
+                <div class="left-contents right-content">
+                    <h2 class="section-title">I will Do Coding and Change The World</h2>
+                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
+                </div>       
             </div>
             <div class="left-items">
                 <div class="left-contents">
                     <h2 class="section-title">I will Do Coding and Change The World</h2>
                 <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary">Learn More</button>
+                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
                     <img src="assets/Layer_1.png" alt="">
                 </div>
             </div>
-            <div class="left-items">
-                <div class="left-contents">
-                    <h2 class="section-title">I will Do Coding and Change The World</h2>
-                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary">Learn More</button>
-                </div>
-                <div class="img">
-                    <img src="assets/Layer_1.png" alt="">
-                </div>
-            </div>
+         </section>
+         <section class="sub-section">
+            <h1 class="sub-title"></h1>
+            <p class="sub-description"></p>
          </section>
     </main>
     <footer>
