--- a/index.html
+++ b/index.html
@@ -57,8 +57,11 @@
             </div>
          </section>
          <section class="sub-section">
-            <h1 class="sub-title"></h1>
-            <p class="sub-description"></p>
+            <h1 class="sub-title">My Inspiration</h1>
+            <p class="sub-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <div class="sub-video">
+                <iframe class="sub-youtube" width="1120px" height="520px" src="https://www.youtube.com/embed/JUwePydwbUI?si=H5UtjmmuP46dH1e9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            </div>
          </section>
     </main>
     <footer>
