--- a/index.html
+++ b/index.html
@@ -1,35 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Simple website</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
+
 <body>
     <header>
-         <nav>
+        <nav>
             <h2 class="logo">ToNu</h2>
             <a class="common-link" href="#"><button class="btn-primary">Download Resume</a></button>
-         </nav>
-         <div class="main-header">
+        </nav>
+        <div class="main-header">
             <div class="header-content">
                 <img class="header-img" src="assets/Group.png" alt="_blank">
                 <h1 class="header-title">"In the near future, I hope to become a Developer."</h1>
-                <p class="header-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
-                <button class="btn-primary header-btn"><a href="#footer" class="header-link every-link">Contact with me</a></button>
+                <p class="header-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+                    Lorem Ipsum has been the industry's standard dummy text.</p>
+                <button class="btn-primary header-btn"><a href="#footer" class="header-link every-link">Contact with
+                        me</a></button>
             </div>
-         </div>
+        </div>
     </header>
     <main>
-         <section class="main-section">
+        <section class="main-section">
             <h1 class="sectional-header">Why Web Development?</h1>
-            <p class="sectional-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <p class="sectional-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                Ipsum has been the industry's standard dummy text.</p>
             <div class="left-items">
                 <div class="left-contents">
                     <h2 class="section-title">I will Do Coding and Change The World</h2>
-                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.</p>
+                    <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
                     <img src="assets/Layer_1.png" alt="">
@@ -41,31 +47,80 @@
                 </div>
                 <div class="left-contents right-content">
                     <h2 class="section-title">I will Do Coding and Change The World</h2>
-                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
-                </div>       
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.</p>
+                    <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
+                </div>
             </div>
             <div class="left-items">
                 <div class="left-contents">
                     <h2 class="section-title">I will Do Coding and Change The World</h2>
-                <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
+                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
+                        industry.</p>
+                    <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
                     <img src="assets/Layer_1.png" alt="">
                 </div>
             </div>
-         </section>
-         <section class="sub-section">
+        </section>
+        <section class="sub-section">
             <h1 class="sub-title">My Inspiration</h1>
-            <p class="sub-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text.</p>
+            <p class="sub-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                Ipsum has been the industry's standard dummy text.</p>
             <div class="sub-video">
-                <iframe class="sub-youtube" width="1120px" height="520px" src="https://www.youtube.com/embed/JUwePydwbUI?si=H5UtjmmuP46dH1e9" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+                <iframe class="sub-youtube" width="1096px" height="510px"
+                    src="https://www.youtube.com/embed/JUwePydwbUI?si=H5UtjmmuP46dH1e9" title="YouTube video player"
+                    frameborder="0"
+                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share"
+                    referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </div>
-         </section>
+        </section>
+        <section class="card-section">
+            <div class="card-contents">
+                <h1 class="card-title">My Current Target</h1>
+                <p class="card-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
+                    Ipsum has been the industry's standard dummy text.</p>
+            </div>
+            <div class="full-card-items">
+                <div class="card-items card-items-1">
+                    <img src="assets/html.png" class="logo-items">
+                    <h3 class="sub-card-title">HTML</h3>
+                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+                <div class="card-items card-items-2">
+                    <img src="assets/css.png" class="logo-items">
+                    <h3 class="sub-card-title">CSS</h3>
+                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+                <div class="card-items card-items-3">
+                    <img src="assets/js.png" class="logo-items js-logo">
+                    <h3 class="sub-card-title">JavaScript</h3>
+                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <a href="#" class="card-link">Learn More</a>
+                </div>
+            </div>
+        </section>
     </main>
     <footer>
-        
+        <section class="support-footer">
+            <h1 class="support-title">I need Support</h1>
+            <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            </p>
+            <input class="support-inputer" type="text" placeholder="Suggest me any feedback for me">
+            <input class="input-btn" type="submit">
+        </section>
+        <section class="main-footer">
+            <h3 class="side-footer-title">An Open Commitment by Tahanur Islam</h3>
+            <div class="img-footer">
+                <a href="https://www.facebook.com/" class="fb-link"><img src="assets/facebook.png" class="side-footer-img"></a>
+                <img src="assets/github.png" class="side-footer-img">
+                <img src="assets/linkedin-icon 1.png" class="side-footer-img">
+            </div>
+        </section>
     </footer>
 </body>
+
 </html>
