--- a/index.html
+++ b/index.html
@@ -11,16 +11,15 @@
 <body>
     <header>
         <nav>
-            <h2 class="logo">ToNu</h2>
+            <h2 class="logo">To<span>N</span>u</h2>
             <a class="common-link" href="#"><button class="btn-primary">Download Resume</a></button>
         </nav>
         <div class="main-header">
             <div class="header-content">
                 <img class="header-img" src="assets/Group.png" alt="_blank">
-                <h1 class="header-title">"In the near future, I hope to become a Developer."</h1>
-                <p class="header-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-                    Lorem Ipsum has been the industry's standard dummy text.</p>
-                <button class="btn-primary header-btn"><a href="#footer" class="header-link every-link">Contact with
+                <h1 class="header-title">"I am a future Developer, I hope to become a Developer soon"</h1>
+                <p class="header-description">"Welcome to our platform, where technology meets creativity. Let's bring your ideas to life."</p>
+                <button class="btn-primary header-btn"><a href="#main-footer-side" class="header-link every-link">Contact with
                         me</a></button>
             </div>
         </div>
@@ -28,13 +27,11 @@
     <main>
         <section class="main-section">
             <h1 class="sectional-header">Why Web Development?</h1>
-            <p class="sectional-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                Ipsum has been the industry's standard dummy text.</p>
+            <p class="sectional-para">"Unlock endless possibilities with web development, transforming your digital vision into reality."</p>
             <div class="left-items">
                 <div class="left-contents">
-                    <h2 class="section-title">I will Do Coding and Change The World</h2>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <h2 class="section-title">Code Today, Transform Tomorrow</h2>
+                    <p class="section-description">Empower your vision with code, and together, we'll shape the future.</p>
                     <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
@@ -46,17 +43,15 @@
                     <img src="assets/Layer_1.png" alt="">
                 </div>
                 <div class="left-contents right-content">
-                    <h2 class="section-title">I will Do Coding and Change The World</h2>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <h2 class="section-title">Innovate with Code, Impact the World</h2>
+                    <p class="section-description">Build with code, and together, we'll craft a brighter future and a meaningful difference in our digital age.</p>
                     <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
             </div>
             <div class="left-items">
                 <div class="left-contents">
-                    <h2 class="section-title">I will Do Coding and Change The World</h2>
-                    <p class="section-description">Lorem Ipsum is simply dummy text of the printing and typesetting
-                        industry.</p>
+                    <h2 class="section-title">Build with Code, Create a Better Future</h2>
+                    <p class="section-description">Innovate with code, and together, we'll change the world, one breakthrough at a time, leaving a lasting impact on generations to come.</p>
                     <button class="btn-primary"><a class="common-link section-link" href="#">Learn More</a></button>
                 </div>
                 <div class="img">
@@ -65,9 +60,10 @@
             </div>
         </section>
         <section class="sub-section">
-            <h1 class="sub-title">My Inspiration</h1>
-            <p class="sub-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                Ipsum has been the industry's standard dummy text.</p>
+            <div class="sub-content-header">
+                <h1 class="sub-title">My Inspiration</h1>
+            <p class="sub-description">My inspiration for web development stems from a passion for creating intuitive, impactful digital experiences that connect people and ideas.</p>
+            </div>
             <div class="sub-video">
                 <iframe class="sub-youtube" width="1096px" height="510px"
                     src="https://www.youtube.com/embed/JUwePydwbUI?si=H5UtjmmuP46dH1e9" title="YouTube video player"
@@ -79,26 +75,25 @@
         <section class="card-section">
             <div class="card-contents">
                 <h1 class="card-title">My Current Target</h1>
-                <p class="card-para">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                    Ipsum has been the industry's standard dummy text.</p>
+                <p class="card-para">My current focus is on enhancing user experiences through innovative web solutions, aiming to optimize functionality and engagement seamlessly.</p>
             </div>
             <div class="full-card-items">
                 <div class="card-items card-items-1">
                     <img src="assets/html.png" class="logo-items">
                     <h3 class="sub-card-title">HTML</h3>
-                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p class="card-description">HTML (HyperText Markup Language) is the standard markup language used to create and structure web pages and web applications.</p>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
                 <div class="card-items card-items-2">
                     <img src="assets/css.png" class="logo-items">
                     <h3 class="sub-card-title">CSS</h3>
-                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p class="card-description">CSS (Cascading Style Sheets) is a language used for describing the presentation or visual styling of a web page written in HTML.</p>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
                 <div class="card-items card-items-3">
                     <img src="assets/js.png" class="logo-items js-logo">
                     <h3 class="sub-card-title">JavaScript</h3>
-                    <p class="card-description">Lorem Ipsum is simply dummy text of the printing.</p>
+                    <p class="card-description">JavaScript is a high-level programming language primarily used to create interactive effects within web browsers.</p>
                     <a href="#" class="card-link">Learn More</a>
                 </div>
             </div>
@@ -107,17 +102,19 @@
     <footer>
         <section class="support-footer">
             <h1 class="support-title">I need Support</h1>
-            <p class="support-description">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+            <p class="support-description">Seek support and help by filling the form and inform us what do you need
             </p>
             <input class="support-inputer" type="text" placeholder="Suggest me any feedback for me">
-            <input class="input-btn" type="submit">
+            <a href="#" class="input-button"><input class="input-btn" type="submit"></a>
         </section>
-        <section class="main-footer">
-            <h3 class="side-footer-title">An Open Commitment by Tahanur Islam</h3>
+        <section id="main-footer-side" class="main-footer">
+            <h3 class="side-footer-title">Tahanur Islam's Unwavering and Public Commitment</h3>
             <div class="img-footer">
-                <a href="https://www.facebook.com/" class="fb-link"><img src="assets/facebook.png" class="side-footer-img"></a>
-                <img src="assets/github.png" class="side-footer-img">
-                <img src="assets/linkedin-icon 1.png" class="side-footer-img">
+                <a href="https://www.facebook.com/" target="_blank" class="fb-link"><img src="assets/facebook.png"
+                        class="side-footer-img"></a>
+                <a href="https://github.com/" class="git-link"><img src="assets/github.png" class="side-footer-img"></a>
+                <a href="https://linkedin.com/" target="_blank" class="linkedin-link"><img
+                        src="assets/linkedin-icon 1.png" class="side-footer-img"></a>
             </div>
         </section>
     </footer>
